--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.ronin.bosszhipin"
-        minSdkVersion 13
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -30,10 +30,16 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 
-    compile "org.jetbrains.anko:anko-sdk15:${anko_version}" // sdk19, sdk21, sdk23 are also available
-    compile "org.jetbrains.anko:anko-support-v4:${anko_version}" // In case you need support-v4 bindings
+    //sdk15 sdk19, sdk21, sdk23 are also available
+    compile "org.jetbrains.anko:anko-sdk21:${anko_version}"
+    compile "org.jetbrains.anko:anko-support-v4:${anko_version}"
+    // In case you need support-v4 bindings
     compile "org.jetbrains.anko:anko-appcompat-v7:${anko_version}" // For appcompat-v7 bindings
     compile "org.jetbrains.anko:anko-recyclerview-v7:${anko_version}" // For appcompat-v7 bindings
+    compile "org.jetbrains.anko:anko-cardview-v7:${anko_version}" // For appcompat-v7 bindings
+    compile "org.jetbrains.anko:anko-design:${anko_version}" // For design bindings
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     compile depend["brvah"]
     compile depend["cardview_v7"]
@@ -43,9 +49,11 @@ dependencies {
     compile depend["design"]
 
     compile depend["glide"]
-//    compile depend["gson"]
+    compile depend["gson"]
     compile depend["photoview"]
 
 
-
+}
+repositories {
+    mavenCentral()
 }
