--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply from:"config/config.gradle"
+apply from: "config/config.gradle"
 
 buildscript {
+    ext.kotlin_version = '1.1.0'
     repositories {
         jcenter()
         mavenCentral()
@@ -9,8 +10,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:${kotlin_version}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
