--- a/config/config.gradle
+++ b/config/config.gradle
@@ -26,7 +26,7 @@ ext {
     toprightmenuVersion = "1.0"
     butterknifeVersion = "7.0.1"
     retrofitVersion = "2.0.0-beta4"
-    gsonVersion = "2.6.2"
+    gsonVersion = "2.8.0"
     glideVersion = "3.7.0"
     photoviewVersion = "1.4.1"
     appintroVersion = "4.1.0"
@@ -43,6 +43,7 @@ ext {
     xrecyclerviewVersion = "1.3.2"
     recyclerviewAnimVersion = "2.2.5"
     brvahVersion = "2.9.3"
+    litepalVersion = "1.5.1"
 
     dependencies = [
 
@@ -87,7 +88,8 @@ ext {
             /*
              * json解析
              */
-//            gson                    : "com.jakewharton:butterknife:${gsonVersion}",
+            gson                    : "com.google.code.gson:gson:${gsonVersion}",
+            litepal                 : "org.litepal.android:core:${litepalVersion}",
             /*
              * 图片加载
              */
