--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-kotlin_version=1.1.0
+org.gradle.daemon=true
+kotlin.incremental=true
 support_version=25.1.1
 anko_version=0.9.1
 
